# vitadeck

./: .clang-format  .clangd  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  nob.c  nob.h  nob.old  skills-lock.json  vitadeck.config.json
.agents/skills/vitadeck-build/: SKILL.md
.agents/skills/vitadeck-deck-app-init/: SKILL.md
.agents/skills/vitadeck-manual-testing/: SKILL.md
.agents/skills/vitadeck-vdapp-upload/scripts/: upload-vdapp.sh
.codex/environments/: environment.toml
.cursor/: worktrees.json
.cursor/rules/: build-with-docker.mdc  js-runtime-build.mdc  linux-build.mdc  macos-build.mdc  react-compiler.mdc
.cursor/skills/vitadeck-build/: SKILL.md
.cursor/skills/vitadeck-vdapp-upload/: SKILL.md
.cursor/skills/vitadeck-vita3k-testing/: SKILL.md
.github/workflows/: ci.yml  vita-build.yml
deck-apps/counters/: App.tsx
deck-apps/hello/: App.tsx
deck-apps/minesweeper/: App.tsx  vitadeck.json
deck-apps/shared/: Counter.tsx
deck-apps/timers/: App.tsx  vitadeck.json
docs/: deck-app-packages-plan.md  host-control-media-remote-architecture-handoff.md  host-control-starter-iteration.html  mvp-plan.md  scroll-container.html  shell-runtime-upload-plan.md
docs/adr/: 0001-bootstrap-dedup.md  0001-deck-bootstrap-dedup.md  0002-smoke-ci-linux-xvfb.md
docs/host-control/: README.md  architecture-sketch.md  b-http-session.md  implementation-phases.md  overview.md  picohttpparser-vita-spike.md  topology-comparison.md  vita-http-server-libraries.md
js/: .oxfmtrc.json  .oxlintrc.json  biome.json  global.d.ts  main.ts  main.tsx  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  raylib-renderer.ts  react-renderer.ts  renderer.ts  rolldown.config.js  rollup.config.js  tsconfig.json  tsconfig.scripts.json  vitadeck-react-reconciler.ts  vitadeck.config.json
js/app/: App.tsx
js/deck-apps/counters/: App.tsx  vitadeck.json
js/deck-apps/hello/: App.tsx  vitadeck.json
js/deck-apps/minesweeper/: App.tsx
js/deck-apps/shared/: Counter.tsx
js/deck-apps/timers/: App.tsx
js/examples/: package.json
js/examples/_prototype-media-remote/: NOTES.md  package.json  run-host-prototype.sh  tsconfig.json  vitadeck.config.json
js/examples/_prototype-media-remote/src/: App.tsx
js/examples/chat/: package.json  vitadeck.config.json
js/examples/chat/scripts/: ensure-genesys-local.mjs
js/examples/chat/src/: App.tsx  conversationScript.ts
js/examples/chat/src/genesys/: auth.ts  config.ts  copilot.ts  genesys.local.example.ts  http.ts  token.ts
js/examples/counters/: package.json  tsconfig.json  vitadeck.config.json
js/examples/counters/src/: App.tsx  Counter.tsx
js/examples/default/: package.json  tsconfig.json  vitadeck.config.json
js/examples/default/src/: App.tsx
js/examples/fetch/: package.json  vitadeck.config.json
js/examples/fetch/src/: App.tsx
js/examples/hello/: package.json  tsconfig.json  vitadeck.config.json
js/examples/hello/src/: App.tsx  Counter.tsx
js/examples/host-control/: package.json  vitadeck.config.json
js/examples/host-control/src/: App.tsx
js/examples/minesweeper/: package.json  vitadeck.config.json
js/examples/minesweeper/src/: App.tsx
js/examples/smoke/: package.json  vitadeck.config.json
js/examples/smoke/assets/fonts/: DejaVu-LICENSE.txt
js/examples/smoke/src/: App.tsx
js/examples/timers/: package.json  vitadeck.config.json
js/examples/timers/src/: App.tsx
js/scripts/: copy-active-deck-app.ts  generate-active-deck-app.ts
js/src/: drawlist.ts  global.d.ts  input.ts  main.tsx  raylib-renderer.ts  reconciler-manager.ts  vitadeck-react-reconciler-mutation.ts  vitadeck-react-reconciler.ts  vitadeck-reconciler-shared.ts
js/src/app/: App.tsx  MainLauncher.tsx  theme.tsx
js/src/app/components/: BouncingBar.tsx  Button.tsx  Counter.tsx  Header.tsx  PanelGrid.tsx  Scanline.tsx  Typewriter.tsx
js/src/app/hooks/: useTicker.ts  useTypewriter.ts
js/src/app/pages/: Benchmark.tsx  Counters.tsx  GamePong.tsx  Hello.tsx  Minesweeper.tsx  Timers.tsx
js/src/lib/: setInterval.ts
js/src/runtime/: index.tsx  theme.tsx
module/: readme.txt
scripts/: agent-check.sh  build-vita3k-vpk.sh  clang-format.sh  host-control-e2e.sh  make-scroll-fixtures.sh  stage-example-apps.sh  vita3k-deploy.sh
src/: jsdraw.c  jsglobals.c  jsinput.c  jslib.c  jstimeout.c  main.c
src/core/: bootstrap.c  bootstrap.h  deck_bootstrap.c  deck_bootstrap.h  deck_host.c  deck_host.h  event_queue.c  event_queue.h  host_control_link.c  host_control_link.h  js_runtime.c  js_runtime.h  package_library.c  package_library.h  settings.c  settings.h
src/js/: main.js
src/jslib/: colors.c  draw.c  fetch.c  host_control.c  host_control.h  input.c  instance.c  instance_tree.c  jslib.c  jslib.h  jslib_internal.c  jslib_internal.h  jslib_modules.h  log.c  timeout.c
src/net/: host_control.c  host_control.h  http_parse.c  http_parse.h
src/platform/: thread.h  thread_posix.c  thread_vita.c
src/shell/: shell.c  shell.h
src/ui/: fonts.c  fonts.h  images.c  images.h  input.c  input.h  instance_tree.c  instance_tree.h  render.c  render.h  scroll.c  scroll.h
src/upload/: archive.c  archive.h  http_server.c  http_server.h
tests/: run_smoke_test.sh  smoke_harness.c  timer_reload_harness.c
